make some change

--- a/index.html
+++ b/index.html
@@ -117,6 +117,133 @@
         </div>
         <hr class="my-4">
     </div>
+    <!-- Simple section with pictures -->
+    <div class="container-fluid padding">
+        <div class="row padding">
+            <div class="offset-lg-2 col-lg-4">
+                <h2>Lorem ipsum dolor sit amet.</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam sint reiciendis neque optio cum
+                    animi debitis incidunt et ullam sit, ipsam rem alias, autem nemo, ipsa fugit. Ipsam, aut sed?
+                    <br><br>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni voluptatibus, beatae debitis,
+                    adipisci dolor, iure ex ipsum molestiae itaque modi voluptas mollitia reprehenderit deserunt quas
+                    optio quasi aperiam voluptatem quam.
+                    <br><br>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni voluptatibus, beatae debitis,
+                    adipisci dolor, iure ex ipsum molestiae itaque modi voluptas mollitia reprehenderit deserunt quas
+                    optio quasi aperiam voluptatem quam.
+                    <br><br>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni voluptatibus, beatae debitis,
+                    adipisci dolor, iure ex ipsum molestiae itaque modi voluptas mollitia reprehenderit deserunt quas
+                    optio quasi aperiam voluptatem quam.
+                    <br>
+                    <br><br>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni voluptatibus, beatae debitis,
+                    adipisci dolor, iure ex ipsum molestiae itaque modi voluptas mollitia reprehenderit deserunt quas
+                    optio quasi aperiam voluptatem quam.
+                    <br>
+
+                    <a href="#" class="btn btn-danger" style="margin-top: 1em;">Learn more</a>
+                </p>
+            </div>
+            <div class="col-lg-6">
+                <img src="img/section1.jpg" class="img-fluid">
+            </div>
+        </div>
+    </div>
+    <!-- Block with a fixed picture -->
+    <figure>
+        <div class="fixed-wrap">
+            <div id="fixed">
+                <div id="lol"></div>
+            </div>
+        </div>
+    </figure>
+    <!-- Closed section -->
+    <div class="text-center">
+        <button type="button" class="btn btn-success" id="gifsBtn" data-toggle="collapse" data-target="#gifs">Open
+            Block</button>
+    </div>
+    <div id="gifs" class="collapse">
+        <div class="container-fluid padding">
+            <div class="row text-center">
+                <div class="col-sm-6 col-md-3">
+                    <img src="img/gif1.gif" class="gif">
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <img src="img/gif2.gif" class="gif">
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <img src="img/gif3.gif" class="gif">
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <img src="img/gif4.gif" class="gif">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Variety -->
+    <div class="container-fluid padding">
+        <div class="row alert text-center">
+            <div class="col-12">
+                <h1 class="display-4">Lorem, ipsum.</h1>
+            </div>
+            <hr>
+        </div>
+    </div>
+    <div class="container padding">
+        <div class="row padding">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="img/pic1.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="card-title">Lorem, ipsum.</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quia
+                            architecto praesentium?</p>
+                        <a href="#" class="btn btn-warning">Go</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="img/pic2.jpg" class="card-img-top">
+                    <dic class="card-body">
+                        <h4 class="card-title">Lorem, ipsum.</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quia
+                            architecto praesentium?</p>
+                        <a href="#" class="btn btn-warning">Go</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="img/pic3.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="card-title">Lorem, ipsum.</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quia architecto
+                            praesentium?</p>
+                        <a href="#" class="btn btn-warning">Go</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <!-- Footer -->
+    <footer class="container-fluid">
+        <div class="container-fluid">
+            <div class="row padding text-center">
+                <div class="col-12">
+                    <h2>Contact us</h2>
+                </div>
+                <div class="col-12 social padding">
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <!-- Optional JavaScript -->
